package com.uu.client.bean.longconnection;

// 建立长连接
message LongConnection {
	message Request {
		required int64 time = 1; // 客户端发起请求的当前时间，毫秒
		optional int32 netType = 2; // 1：wifi；2：2g；3：3g；4：4g
	}

	message Response {
		required int32 ret = 1; // 0:建立成功；-1：失败，服务端返回该值就表示会立刻关闭链路；
	}

}

// 心跳 客户端每60秒发一次心跳请求
message HeartBeat {
	message Request {
		required int64 time = 1; // 客户端发起请求的当前时间，毫秒
	}

}

